Fixed overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ body {
   background-size: 100% auto;
   margin: 0;
   padding: 0;
+  overflow-x: hidden !important;
 }
 
 .container-fluid{
